build: Экспериментальное сжатие для основы плагинов